--- a/my_styles.css
+++ b/my_styles.css
@@ -8,7 +8,7 @@
 .navbar-inverse {
     opacity: 1;
     background-color: black;
-    border-bottom-color: white;
+    border-bottom-color: lightgrey;
     border-bottom-width: 10px;
     margin-bottom: 0px;
     border-radius: 0px;
