--- a/my_styles.css
+++ b/my_styles.css
@@ -4,24 +4,36 @@
 }
 
 /* Navbar customized */
-
 .navbar-inverse {
     opacity: 1;
     background-color: black;
-    border-bottom-color: lightgrey;
+    border-bottom-color:#333333;
     border-bottom-width: 10px;
     margin-bottom: 0px;
     border-radius: 0px;
 }
 
-/* Site background color */
+/* Size of NavBar */
+.navbar-nav li a {
+    line-height: 95px;
+    height: 85px;
+    padding-top: 0;
+}
 
+/* Font used for NavBar */
+.navFont{
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-size: 1.7em;
+    font-style: normal;
+    
+}
+
+/* Site background color */
 body {
     background-color: #990000;
 }
 
 /* Menu WIDTH/HEIGHT */
-
 .fMenu {
     max-width: 995px;
     max-height: 1900px;
@@ -29,7 +41,6 @@ body {
 }
 
 /* Background menu color */
-
 .bg-2 {
     background-color: #f7f7f7;
     border: 5px solid #2d2d30;
@@ -79,7 +90,6 @@ body {
 
 
 /* Slideshow */
-
 .slideshow-container {
     max-width: 1000px;
     position: relative;
@@ -88,24 +98,21 @@ body {
 
 
 /* Height Adjustment For Menu List */
-
 ol li {
     line-height: 2.5;
 }
 
 
 /* Watami Logo */
-
 .logo {
     position: absolute;
-    top: 1px;
-    left: 12px;
-    width: 50px;
+    top: 8px;
+    left: 5px;
+    width: 395px;
 }
 
 
 /* Customized Column For Bento Menu */
-
 .column {
     columns: 2;
     -webkit-columns: 2;
