--- a/my_styles.css
+++ b/my_styles.css
@@ -4,7 +4,6 @@
     margin: 0;
 }
 
-
 /* Opacity For NavBar */
 .navbar-custom:hover {
     opacity: 1;
@@ -122,9 +121,9 @@ ol li {
 /* Watami Logo */
 .logo {
     position: absolute;
-    top: 0px;
-    left: 5px;
-    width: 400px;
+    top: -5px;
+    left: -5px;
+    /*width: 400px;*/
 }
 
 /* Customized Column For Bento Menu */
