Changed menu image gallary to thumbnail

--- a/my_styles.css
+++ b/my_styles.css
@@ -40,6 +40,12 @@
     font-style: normal;  
 }
 
+
+.thumbSize{
+    min-height: 50px;
+    height:155px;
+}
+
 /* Site background color */
 body {
     /*background-color: #990000;*/
