--- a/my_styles.css
+++ b/my_styles.css
@@ -33,6 +33,7 @@
     padding-top: 0;
 }
 
+
 /* Font used for NavBar */
 .navFont{
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
@@ -65,7 +66,8 @@ body {
 .fMenu {
     max-width: 995px;
     /*max-height: 1900px;*/
-    padding: 2em 2em 4em;
+    /*padding: 2em 2em 4em;*/
+    padding: .5em .5em 4em;
 }
 
 /* Background menu color */
@@ -102,8 +104,10 @@ body {
 .priceL {
     font-weight: bold;
     float: right;
-    width: 8%;
-    margin-right: 20px;
+    /*width: 8%;*/
+    
+    /*margin-right: 20px;*/
+    margin-right: 10px
 }
 
 
@@ -112,8 +116,10 @@ body {
 .priceD {
     font-weight: bold;
     float: right;
-    width: 8%;
-    margin-right: 12px;
+    /*width: 8%;*/
+    
+    /*margin-right: 12px;*/
+    margin-right: -30px
 }
 
 
@@ -145,4 +151,9 @@ ol li {
     -webkit-columns: 2;
     -moz-columns: 2;
     width: 135%
+}
+
+.menuFont{
+    font-size: 1.4em;
+    font-family: "Trebuchet MS", Helvetica, sans-serif
 }
