--- a/my_styles.css
+++ b/my_styles.css
@@ -124,3 +124,10 @@ ol li {
     font-size: 1.4em;
     font-family: "Trebuchet MS", Helvetica, sans-serif
 }
+
+.noTableBorders{
+    border-top: none !important;
+    border-left: none !important;
+    border:0px;   
+    border-bottom:0px !important;
+}
